# octopus

./: .gitmodules  CMakeLists.txt  CMakePresets.json
assets/images/: chest.aseprite  floor-stone.aseprite  gate.aseprite  hero.aseprite  house.aseprite  sample.aseprite  scorpion.aseprite  strike.aseprite  tentacle.aseprite  tree.aseprite
src/: .clang-format  .clang-tidy  CMakeLists.txt
src/octopus/: CMakeLists.txt  ai.cpp  ai.hpp  build-info.hpp.in  channel.hpp  ecs.hpp  events.hpp  geometry.hpp  main.cpp  random.cpp  random.hpp  scene.cpp  scene.hpp  task.cpp  task.hpp  timer.cpp  timer.hpp  world.cpp  world.hpp
src/sdl/: CMakeLists.txt  error.cpp  error.hpp  sdl.cpp
src/sdl/include/: sdl.hpp
src/sdl/include/sdl/: error.hpp
